--- a/ui_onmyoji_assist.ui
+++ b/ui_onmyoji_assist.ui
@@ -6,14 +6,44 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>540</width>
-    <height>300</height>
+    <width>429</width>
+    <height>670</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Onmyoji Assist</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_radio_button">
+     <item>
+      <widget class="QRadioButton" name="radioButton_yuhun">
+       <property name="text">
+        <string>御魂</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+       <attribute name="buttonGroup">
+        <string notr="true">radioButtonGroup</string>
+       </attribute>
+      </widget>
+     </item>
+     <item>
+      <widget class="QRadioButton" name="radioButton_jiejieka">
+       <property name="text">
+        <string>结界卡合成</string>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+       <attribute name="buttonGroup">
+        <string notr="true">radioButtonGroup</string>
+       </attribute>
+      </widget>
+     </item>
+    </layout>
+   </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_counter">
      <item>
@@ -126,4 +156,7 @@
  </widget>
  <resources/>
  <connections/>
+ <buttongroups>
+  <buttongroup name="radioButtonGroup"/>
+ </buttongroups>
 </ui>
